review: 0404 using stream nicely