@@ -42,8 +42,8 @@ public class RoomCategoryService {
         return rooms.stream()
                 .filter(Optional::isPresent) // 값이 존재하는 Optional만 필터링
                 .map(Optional::get) // Optional에서 값(room) 추출
-                .map(eachRoom -> EachHomePageRoomItemsResponseDto.of(eachRoom))
-                .collect(Collectors.toList());
+                .map(EachHomePageRoomItemsResponseDto::of)
+                .toList();
     }
 
 }
